--- a/index.html
+++ b/index.html
@@ -412,7 +412,11 @@
         <p class="desc">Various versions have evolved over the years, sometimes by accident,
         </p>
         <div class="achievements_cols">
-            <div class="achievements_cols-1">
+            <div class="achievements_cols-1"
+                data-aos="fade-right" 
+                data-aos-delay="200"
+                data-aos-duration="2000"
+            >
                 <div class="">
                     <div class="teachers">
                         <img src="images/GraduationCap.svg" alt="">
@@ -447,7 +451,11 @@
                 </div>
                
             </div>
-            <div class="achievements_cols-2">
+            <div class="achievements_cols-2"
+                data-aos="fade-left" 
+                data-aos-delay="600"
+                data-aos-duration="2000"
+            >
                 <img src="images/achievement-img.png" class="achievement-img">
             </div>
         </div>
@@ -617,10 +625,18 @@
     <!-- Banner Section -->
     <section class="banner">
         <div class="banner-cols">
-            <div class="banner-cols-1">
+            <div class="banner-cols-1"
+                data-aos="fade-right" 
+                data-aos-delay="200"
+                data-aos-duration="2000"
+            >
                 <img src="images/signUp-img.png" alt="">
             </div>
-            <div class="banner-cols-2">
+            <div class="banner-cols-2"
+                data-aos="fade-up" 
+                data-aos-delay="600"
+                data-aos-duration="2000"
+            >
                 <p class="title">Join <span> World's largest</span> learning <br> platform today</p>
                 <p class="banner_subtitle">Start learning by registering for free</p>
                 <div class="button--green">
